--- a/src/main/webapp/views/fragments/header.jspf
+++ b/src/main/webapp/views/fragments/header.jspf
@@ -21,19 +21,19 @@
 
         <div class="carousel-inner" role="listbox">
             <div class="item active">
-                <img src="${pageContext.request.contextPath}/resources/images/1.jpg" width="1200" height="200">
+                <img src="${pageContext.request.contextPath}/resources/images/1.jpg" width="1200" height="200"/>
             </div>
 
             <div class="item">
-                <img src="${pageContext.request.contextPath}/resources/images/2.jpg" width="1200" height="200">
+                <img src="${pageContext.request.contextPath}/resources/images/2.jpg" width="1200" height="200"/>
             </div>
 
             <div class="item">
-                <img src="${pageContext.request.contextPath}/resources/images/3.jpg" width="1200" height="200">
+                <img src="${pageContext.request.contextPath}/resources/images/3.jpg" width="1200" height="200"/>
             </div>
 
             <div class="item">
-                <img src="${pageContext.request.contextPath}/resources/images/4.jpg" width="1200" height="200">
+                <img src="${pageContext.request.contextPath}/resources/images/4.jpg" width="1200" height="200"/>
             </div>
         </div>
 
